fixed bug on mobile mode where opaque background didnt fill screen

--- a/src/components/ChatRoom/room.scss
+++ b/src/components/ChatRoom/room.scss
@@ -367,7 +367,7 @@ button:focus {
 
     .opaque-background {
         width: 100%;
-        min-height: 100%;
+        min-height: 100vh;
         position: fixed;
         z-index: 1;
         background: rgba(12, 12, 12, 0.5);
